# final_miom_project

./: pyproject.toml
app/: db.sqlite3  requirements.txt
app/authenticate/: admin.py  apps.py  authentication.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
app/authenticate/migrations/: 0001_initial.py  0002_company_inn.py
app/companies/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
app/companies/migrations/: 0001_initial.py
app/core/: settings.py  urls.py
app/inventory/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
app/inventory/migrations/: 0001_initial.py
app/sales/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/sales/migrations/: 0001_initial.py
